--- a/strings/ca.lproj/Vvt.strings
+++ b/strings/ca.lproj/Vvt.strings
@@ -128,6 +128,9 @@
 "Access to location is required to browse nearby intersections." = "Cal accedir a la ubicació per navegar per les interseccions properes.";
 
 /* No comment provided by engineer. */
+"Accuracy Threshold" = "Llindar de precisió";
+
+/* No comment provided by engineer. */
 "Accuracy: %@" = "Precisió: %@";
 
 /* No comment provided by engineer. */
@@ -552,6 +555,9 @@
 
 /* No comment provided by engineer. */
 "Change External Maps App" = "Canvia l'aplicació de mapes externs";
+
+/* No comment provided by engineer. */
+"Change GPS Accuracy Warning Threshold" = "Canvia el llindar d'advertència de precisió del GPS";
 
 /* No comment provided by engineer. */
 "Change GPS Information Distance Interval" = "Canviar l'interval de distància de la informació GPS";
@@ -2210,6 +2216,9 @@
 /* No comment provided by engineer. */
 "This will disconnect your headphones from VoiceVista. You can connect to VoiceVista again in the future from here." = "Això desconnectarà els auriculars del VoiceVista. Pots tornar-los a connectar al VoiceVista en un altre moment des d'aquí.";
 
+/* No comment provided by engineer. */
+"Thresholds" = "Llindars";
+
 /* Default route name when create a route from marker or POI detail, %@ is name of a marker or POI
    Text displaying the next intersection that the user will encounter along a selected road, 'To Main St & 2nd Ave' */
 "To %@" = "Dirigint-te a %@";
@@ -2482,6 +2491,9 @@
 
 /* No comment provided by engineer. */
 "Walking Scenario" = "Escenari de caminar";
+
+/* No comment provided by engineer. */
+"Warn the user when GPS accuracy drops below the defined threshold." = "Avisa l'usuari quan la precisió del GPS cau per sota del llindar definit.";
 
 /* No comment provided by engineer. */
 "Waypoint" = "Senyal";
