--- a/strings/da.lproj/Vvt.strings
+++ b/strings/da.lproj/Vvt.strings
@@ -128,6 +128,9 @@
 "Access to location is required to browse nearby intersections." = "Adgang til placering er påkrævet for at gennemse nærliggende vejkryds.";
 
 /* No comment provided by engineer. */
+"Accuracy Threshold" = "Nøjagtighedstærskel";
+
+/* No comment provided by engineer. */
 "Accuracy: %@" = "Nøjagtighed: %@";
 
 /* No comment provided by engineer. */
@@ -552,6 +555,9 @@
 
 /* No comment provided by engineer. */
 "Change External Maps App" = "Skift ekstern kort-app";
+
+/* No comment provided by engineer. */
+"Change GPS Accuracy Warning Threshold" = "Skift tærskelværdi for GPS-nøjagtighedsadvarsel";
 
 /* No comment provided by engineer. */
 "Change GPS Information Distance Interval" = "Skift afstandsinterval for GPS-oplysninger";
@@ -2210,6 +2216,9 @@
 /* No comment provided by engineer. */
 "This will disconnect your headphones from VoiceVista. You can connect to VoiceVista again in the future from here." = "Dette afbryder forbindelsen til hovedtelefonerne fra VoiceVista. Du kan oprette forbindelse til VoiceVista igen i fremtiden herfra.";
 
+/* No comment provided by engineer. */
+"Thresholds" = "Tærskler";
+
 /* Default route name when create a route from marker or POI detail, %@ is name of a marker or POI
    Text displaying the next intersection that the user will encounter along a selected road, 'To Main St & 2nd Ave' */
 "To %@" = "Til %@";
@@ -2482,6 +2491,9 @@
 
 /* No comment provided by engineer. */
 "Walking Scenario" = "Scenarie for gåture";
+
+/* No comment provided by engineer. */
+"Warn the user when GPS accuracy drops below the defined threshold." = "Advar brugeren, når GPS-nøjagtigheden falder til under den definerede tærskel.";
 
 /* No comment provided by engineer. */
 "Waypoint" = "Rutepunkt";
