--- a/strings/fa.lproj/Vvt.strings
+++ b/strings/fa.lproj/Vvt.strings
@@ -128,6 +128,9 @@
 "Access to location is required to browse nearby intersections." = " برای مرور تقاطع‌های نزدیک، دسترسی به موقعیت مکانی لازم است.";
 
 /* No comment provided by engineer. */
+"Accuracy Threshold" = "آستانه دقت";
+
+/* No comment provided by engineer. */
 "Accuracy: %@" = "دقت: %@";
 
 /* No comment provided by engineer. */
@@ -552,6 +555,9 @@
 
 /* No comment provided by engineer. */
 "Change External Maps App" = "تغییر برنامه نقشه خارجی";
+
+/* No comment provided by engineer. */
+"Change GPS Accuracy Warning Threshold" = "تغییر آستانه هشدار دقت GPS";
 
 /* No comment provided by engineer. */
 "Change GPS Information Distance Interval" = "تغییر فاصله زمانی اطلاعات GPS";
@@ -2210,6 +2216,9 @@
 /* No comment provided by engineer. */
 "This will disconnect your headphones from VoiceVista. You can connect to VoiceVista again in the future from here." = "این کار هدفون شما را از VoiceVista قطع می‌کند. در آینده می‌توانید دوباره از اینجا به VoiceVista متصل شوید.";
 
+/* No comment provided by engineer. */
+"Thresholds" = "آستانه‌ها";
+
 /* Default route name when create a route from marker or POI detail, %@ is name of a marker or POI
    Text displaying the next intersection that the user will encounter along a selected road, 'To Main St & 2nd Ave' */
 "To %@" = "به %@";
@@ -2482,6 +2491,9 @@
 
 /* No comment provided by engineer. */
 "Walking Scenario" = "سناریوی پیاده‌روی";
+
+/* No comment provided by engineer. */
+"Warn the user when GPS accuracy drops below the defined threshold." = "هشدار به کاربر زمانی که دقت GPS از آستانه تعریف شده کمتر می‌شود.";
 
 /* No comment provided by engineer. */
 "Waypoint" = "نقطه مسیر";
