--- a/strings/fr.lproj/Vvt.strings
+++ b/strings/fr.lproj/Vvt.strings
@@ -128,6 +128,9 @@
 "Access to location is required to browse nearby intersections." = "L'accès à l'emplacement est requis pour parcourir les intersections à proximité.";
 
 /* No comment provided by engineer. */
+"Accuracy Threshold" = "Seuil de précision";
+
+/* No comment provided by engineer. */
 "Accuracy: %@" = "Précision : %@";
 
 /* No comment provided by engineer. */
@@ -552,6 +555,9 @@
 
 /* No comment provided by engineer. */
 "Change External Maps App" = "Changer l'application Cartes externes";
+
+/* No comment provided by engineer. */
+"Change GPS Accuracy Warning Threshold" = "Modifier le seuil d'alerte de précision GPS";
 
 /* No comment provided by engineer. */
 "Change GPS Information Distance Interval" = "Modifier l’intervalle de distance des informations GPS";
@@ -2210,6 +2216,9 @@
 /* No comment provided by engineer. */
 "This will disconnect your headphones from VoiceVista. You can connect to VoiceVista again in the future from here." = "Ceci va déconnecter votre casque de VoiceVista. Vous pourrez vous connecter à nouveau à VoiceVista plus tard ici.";
 
+/* No comment provided by engineer. */
+"Thresholds" = "Seuils";
+
 /* Default route name when create a route from marker or POI detail, %@ is name of a marker or POI
    Text displaying the next intersection that the user will encounter along a selected road, 'To Main St & 2nd Ave' */
 "To %@" = "Vers %@";
@@ -2482,6 +2491,9 @@
 
 /* No comment provided by engineer. */
 "Walking Scenario" = "Scénario de marche";
+
+/* No comment provided by engineer. */
+"Warn the user when GPS accuracy drops below the defined threshold." = "Avertir l'utilisateur lorsque la précision du GPS descend en dessous du seuil défini.";
 
 /* No comment provided by engineer. */
 "Waypoint" = "Point de repère";
