--- a/strings/pl.lproj/Vvt.strings
+++ b/strings/pl.lproj/Vvt.strings
@@ -128,6 +128,9 @@
 "Access to location is required to browse nearby intersections." = "Aby przeglądać pobliskie skrzyżowania, wymagany jest dostęp do lokalizacji.";
 
 /* No comment provided by engineer. */
+"Accuracy Threshold" = "Próg dokładności";
+
+/* No comment provided by engineer. */
 "Accuracy: %@" = "Dokładność: %@";
 
 /* No comment provided by engineer. */
@@ -552,6 +555,9 @@
 
 /* No comment provided by engineer. */
 "Change External Maps App" = "Zmień zewnętrzną aplikację Mapy";
+
+/* No comment provided by engineer. */
+"Change GPS Accuracy Warning Threshold" = "Zmień próg ostrzeżenia o dokładności GPS";
 
 /* No comment provided by engineer. */
 "Change GPS Information Distance Interval" = "Zmień interwał odległości informacji GPS";
@@ -2210,6 +2216,9 @@
 /* No comment provided by engineer. */
 "This will disconnect your headphones from VoiceVista. You can connect to VoiceVista again in the future from here." = "Spowoduje to odłączenie słuchawek od VoiceVista. Tutaj możesz ponownie połączyć się z VoiceVista w przyszłości.";
 
+/* No comment provided by engineer. */
+"Thresholds" = "Progi";
+
 /* Default route name when create a route from marker or POI detail, %@ is name of a marker or POI
    Text displaying the next intersection that the user will encounter along a selected road, 'To Main St & 2nd Ave' */
 "To %@" = "Do %@";
@@ -2482,6 +2491,9 @@
 
 /* No comment provided by engineer. */
 "Walking Scenario" = "Scenariusz spaceru";
+
+/* No comment provided by engineer. */
+"Warn the user when GPS accuracy drops below the defined threshold." = "Ostrzegaj użytkownika, gdy dokładność GPS spadnie poniżej określonego progu.";
 
 /* No comment provided by engineer. */
 "Waypoint" = "Punkt trasy";
