--- a/strings/pt-PT.lproj/Vvt.strings
+++ b/strings/pt-PT.lproj/Vvt.strings
@@ -128,6 +128,9 @@
 "Access to location is required to browse nearby intersections." = "O acesso ao local é necessário para navegar nos cruzamentos próximos.";
 
 /* No comment provided by engineer. */
+"Accuracy Threshold" = "Limiar de precisão";
+
+/* No comment provided by engineer. */
 "Accuracy: %@" = "Precisão: %@";
 
 /* No comment provided by engineer. */
@@ -552,6 +555,9 @@
 
 /* No comment provided by engineer. */
 "Change External Maps App" = "Alterar aplicativo de mapas externo";
+
+/* No comment provided by engineer. */
+"Change GPS Accuracy Warning Threshold" = "Alterar o limite de aviso de precisão do GPS";
 
 /* No comment provided by engineer. */
 "Change GPS Information Distance Interval" = "Alterar intervalo de distância de informações GPS";
@@ -2210,6 +2216,9 @@
 /* No comment provided by engineer. */
 "This will disconnect your headphones from VoiceVista. You can connect to VoiceVista again in the future from here." = "Esta ação irá desligar os auscultadores do VoiceVista. Poderá voltar a ligá-los ao VoiceVista aqui.";
 
+/* No comment provided by engineer. */
+"Thresholds" = "Limiares";
+
 /* Default route name when create a route from marker or POI detail, %@ is name of a marker or POI
    Text displaying the next intersection that the user will encounter along a selected road, 'To Main St & 2nd Ave' */
 "To %@" = "Para %@";
@@ -2482,6 +2491,9 @@
 
 /* No comment provided by engineer. */
 "Walking Scenario" = "Cenário de caminhada";
+
+/* No comment provided by engineer. */
+"Warn the user when GPS accuracy drops below the defined threshold." = "Avisar o utilizador quando a precisão do GPS descer abaixo do limite definido.";
 
 /* No comment provided by engineer. */
 "Waypoint" = "Ponto de Passagem";
